--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
-    "serverless-appsync-plugin": "^1.2.0"
+    "serverless-appsync-plugin": "^1.2.0",
+    "serverless-stack-output": "^0.2.3"
   }
 }
