--- a/serverless.yml
+++ b/serverless.yml
@@ -13,16 +13,42 @@ provider:
   iamRoleStatements:
     - Effect: Allow
       Action:
-        - dynamodb:*
-        - lambda:*
-      Resource: "*"
+        - dynamodb:DescribeTable
+        - dynamodb:Query
+        - dynamodb:Scan
+        - dynamodb:GetItem
+        - dynamodb:PutItem
+        - dynamodb:UpdateItem
+        - dynamodb:DeleteItem
+        - lambda:GetFunction,
+        - lambda:CreateFunction,
+        - lambda:DeleteFunction,
+        - lambda:UpdateFunctionConfiguration,
+        - lambda:UpdateFunctionCode,
+        - lambda:ListVersionsByFunction,
+        - lambda:PublishVersion,
+        - lambda:CreateAlias,
+        - lambda:DeleteAlias,
+        - lambda:UpdateAlias,
+        - lambda:GetFunctionConfiguration,
+        - lambda:AddPermission,
+        - lambda:RemovePermission,
+        - lambda:InvokeFunction
+      Resource:
+        - "arn:aws:dynamodb:${self:provider.region}:*:*" # allow creation of tables in our current region
+        - "arn:aws:lambda:${self:provider.region}:*:*" # allow in current region
 
 plugins:
   - serverless-appsync-plugin
+  - serverless-stack-output
 
 custom:
   resources:
     PRIMARY_TABLE: ${self:service}-dynamo-table-${self:provider.stage}
+
+  output:
+    handler: ./scripts/output.handler
+    file: ./aws-config.json
 
   appSync: # appsync plugin configuration
     name: ${self:service}-appsync-${self:provider.stage}
