Change config and delete unecessary role for lambda

--- a/resources/appsync-dynamo-role.yml
+++ b/resources/appsync-dynamo-role.yml
@@ -20,9 +20,15 @@ Resources:
             Statement:
               - Effect: "Allow"
                 Action:
-                  - "dynamodb:*"
+                  - dynamodb:DescribeTable
+                  - dynamodb:Query
+                  - dynamodb:Scan
+                  - dynamodb:GetItem
+                  - dynamodb:PutItem
+                  - dynamodb:UpdateItem
+                  - dynamodb:DeleteItem
                 Resource:
-                  - "*"
+                  - "arn:aws:dynamodb:${self:provider.region}:*:*" # allow creation of tables in our current region
 
   AppSyncLoggingServiceRole:
     Type: "AWS::IAM::Role"
